2009-03-09  Alexander Larsson  <alexl@redhat.com>

	Bug 551683 – archive backend says file doesn't exist for directories

        * daemon/gvfsbackendarchive.c:
        (do_open_for_read):
	Return G_IO_ERROR_IS_DIRECTORY if opening directory.

2009-03-09  Alexander Larsson  <alexl@redhat.com>

	Bug 570888 – gvfs-gphoto2 mount 4 devices when pluging one camera

        * monitor/gphoto2/ggphoto2volumemonitor.c:
        (get_stores_for_camera):
	Ignore stores that have 0 byte capability.

2009-03-08  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	Bug 533219 - anonymous ftp login not working

	* daemon/gvfsbackendftp.c: (ftp_connection_login):
	replace the empty string with the default password

2009-03-06  Alexander Larsson  <alexl@redhat.com>

        * ChangeLog:
        * daemon/daemon-main.c:
	Only spew g_debug if backend started with --debug

2009-03-06  Alexander Larsson  <alexl@redhat.com>

        Reviewed by NOBODY (OOPS!).

        * daemon/daemon-main.c:
        (log_debug):
        (daemon_init):
        (daemon_parse_args):

2009-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/daemon-main.c:
        * daemon/gvfsbackend.c:
        * daemon/gvfsbackendburn.c:
        * daemon/gvfsbackenddav.c:
        * daemon/gvfsbackendhttp.c:
        * daemon/gvfsbackendobexftp.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsdaemon.c:
        * daemon/gvfsjobcloseread.c:
        * daemon/gvfsjobclosewrite.c:
        * daemon/gvfsjobcopy.c:
        * daemon/gvfsjobdbus.c:
        * daemon/gvfsjobenumerate.c:
        * daemon/gvfsjobmount.c:
        * daemon/gvfsjobmove.c:
        * daemon/gvfsjobpull.c:
        * daemon/gvfsjobpush.c:
        * daemon/gvfsjobread.c:
        * daemon/gvfsjobseekread.c:
        * daemon/gvfsjobseekwrite.c:
        * daemon/gvfsjobunmount.c:
        * daemon/gvfsjobwrite.c:
        * daemon/mount.c:
	Convert all spew to g_debug()
